# arc-mutual-concept-loss

./: .gitignore  README.md  issues.md  personal_note.md  pyproject.toml  submission.json
.github/workflows/: ci.yaml
configs/: data_prep.yaml  eval.yaml  meta_adaptation.yaml  research_plan.yaml  research_plan_eval_only.yaml  train.yaml
configs/ablations/: B0.yaml  B1.yaml  B2.yaml  B3.yaml  B4.yaml  B5.yaml  B6.yaml
data/processed/: 00576224.json  007bbfb7.json  009d5c81.json  00d62c1b.json  00dbd492.json  017c7c7b.json  025d127b.json  03560426.json  045e512c.json  0520fde7.json  05269061.json  05a7bcf2.json  05f2a901.json  0607ce86.json  0692e18c.json  06df4c85.json  070dd51e.json  08ed6ac7.json  09629e4f.json  0962bcdd.json  09c534e7.json  0a1d4ef5.json  0a2355a6.json  0a938d79.json  0b148d64.json  0b17323b.json  0bb8deee.json  0becf7df.json  0c786b71.json  0c9aba6e.json  0ca9ddb6.json  0d3d703e.json  0d87d2a6.json  0e206a2e.json  0e671a1a.json  0f63c0b9.json  103eff5b.json  10fcaaa3.json  11852cab.json  1190bc91.json  (+960 more)
data/splits/: meta_eval_test.json  val_tasks.json
docs/: ablation_summary.md  experiment_log.md  experiment_plan.md  findings.md  implementation_plan.md  research_experiments_plan.md
reports/ablations/: B0.json  B1.json  B2.json  B3.json  B4.json  B5_lightweight.json  B5_single_head.json  B5_transformer.json  B6_k16_a01.json  B6_k32_a02.json  B6_k8_a005.json  summary.json
reports/ic_eval/: latest.json
tests/: test_data_module_behavior.py  test_data_pipeline.py  test_eval_metrics.py  test_model_forward.py  test_share_regularizer.py
(+1036 files in other folders)
