[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "arc-mutual-concept-loss"
version = "0.1.0"
description = "Research code for ARC mutual concept loss experiments."
requires-python = ">=3.10"
authors = [{name = "ARC Research"}]
readme = "README.md"
dependencies = [
    "torch>=2.2.0",
    "numpy>=1.24",
    "hydra-core>=1.3",
    "scikit-learn>=1.3",
    "tensorboard>=2.14",
]

[project.optional-dependencies]
test = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.4.0",
    "mypy>=1.8",
    "types-PyYAML>=6.0.12",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP"]

[tool.mypy]
python_version = "3.10"
warn_unused_configs = true
ignore_missing_imports = true
strict_optional = false

